--- a/student_life/notebooks/correlation_and_missing_data_analysis.ipynb
+++ b/student_life/notebooks/correlation_and_missing_data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "from src.utils import aggregation_utils\n",
     "from tabulate import tabulate\n",
     "from numpy import corrcoef\n",
+    "\n",
     "def sum_avg(array_like):\n",
     "    return np.sum(array_like) / student_count\n",
     "    "
@@ -32,24 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abhinav/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:6211: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  sort=sort)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "students = student_utils.get_available_students(definitions.BINNED_ON_VAR_FREQ_DATA_PATH)\n",
     "data = student_utils.get_var_binned_data_for_students(*students)\n",
@@ -58,30 +44,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------------------+----------+\n",
-      "| activity_inference_min        | 0.517565 |\n",
-      "| activity_inference_mode       | 0.517565 |\n",
-      "| audio_activity_inference_max  | 0.4068   |\n",
-      "| audio_activity_inference_min  | 0.4068   |\n",
-      "| audio_activity_inference_mode | 0.4068   |\n",
-      "| conv_duration_min_sum         | 0.983573 |\n",
-      "| dark_duration_min_sum         | 0.997324 |\n",
-      "| hours_slept_sum               | 0.99934  |\n",
-      "| latitude_mode                 | 0.953511 |\n",
-      "| longitude_mode                | 0.953511 |\n",
-      "| phonecharge_duration_min_sum  | 0.998638 |\n",
-      "| phonelock_duration_min_sum    | 0.999966 |\n",
-      "| sleep_rating_sum              | 0.99934  |\n",
-      "| stress_level_mode             | 0.999279 |\n",
-      "| student_id                    | 0        |\n",
-      "+-------------------------------+----------+\n"
+      "+-------------------------------+-----------+\n",
+      "| day_of_week                   | 0         |\n",
+      "| epoch_of_day                  | 0         |\n",
+      "| time_since_last_label         | 0.0169877 |\n",
+      "| time_to_next_label            | 0.028877  |\n",
+      "| activity_inference_min        | 0.526033  |\n",
+      "| activity_inference_max        | 0.526033  |\n",
+      "| activity_inference_mode       | 0.526033  |\n",
+      "| audio_activity_inference_min  | 0.415986  |\n",
+      "| audio_activity_inference_max  | 0.415986  |\n",
+      "| audio_activity_inference_mode | 0.415986  |\n",
+      "| conv_duration_min_sum         | 0.983714  |\n",
+      "| phonecharge_duration_min_sum  | 0.998646  |\n",
+      "| phonelock_duration_min_sum    | 0.998639  |\n",
+      "| dark_duration_min_sum         | 0.997746  |\n",
+      "| hours_slept_sum               | 0.999337  |\n",
+      "| sleep_rating_sum              | 0.999337  |\n",
+      "| latitude_mode                 | 0.957824  |\n",
+      "| longitude_mode                | 0.957824  |\n",
+      "| stress_level_mode             | 0.998971  |\n",
+      "+-------------------------------+-----------+\n"
      ]
     }
    ],
