--- a/student_life/notebooks/stress-historgram-cluster.ipynb
+++ b/student_life/notebooks/stress-historgram-cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,19 +26,12 @@
     "from src.utils import read_utils as reader\n",
     "from src.utils.read_utils import read_yaml\n",
     "from src.utils import student_utils\n",
-    "from src.data_getter import student_life_var_binned_data_getter as sl_getter\n",
-    "from src.definitions import MINIMAL_PROCESSED_DATA_PATH, \\\n",
-    "    FEATURE_CONFIG_FILE_PATH, STUDENT_FOLDER_NAME_PREFIX, BINNED_ON_VAR_FREQ_DATA_PATH\n",
-    "from src.data_processing import helper\n",
-    "\n",
-    "import sklearn\n",
-    "from sklearn import cluster as CL\n",
-    "from sklearn.decomposition import PCA\n"
+    "from src.data_processing import helper\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,12 +67,12 @@
     "data = None\n",
     "with open(stress_csv_data_path, 'rb') as data_file:\n",
     "    data = pd.read_csv(data_file)\n",
-    "print(list(data))"
+    "    print(list(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,9 +100,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.05555556 3.25714286 3.59574468 2.07692308 2.47457627 3.75789474\n",
+      " 3.25       2.83928571 3.2        4.3902439  3.25       3.66071429\n",
+      " 4.06382979 3.3        3.66666667 3.26666667 2.83606557 2.97959184\n",
+      " 3.58333333 3.16       3.5        2.62857143 3.11764706 2.65753425\n",
+      " 3.38095238 2.90909091 2.72727273 3.41935484 3.33333333 4.33333333\n",
+      " 2.78947368 3.34146341 2.94565217 2.12121212 3.42105263 3.33333333\n",
+      " 2.56060606 3.55555556 3.51020408 3.06382979 3.39534884 3.16\n",
+      " 2.6        3.32835821 3.70909091 2.69516729]\n",
+      "stress_level_stress_0      6\n",
+      "stress_level_stress_1     27\n",
+      "stress_level_stress_2     48\n",
+      "stress_level_stress_3      9\n",
+      "stress_level_stress_4     18\n",
+      "svg_stress_score_        330\n",
+      "hist_cluster               0\n",
+      "Name: 0, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "K = 5\n",
     "def cluster(estimator, data):\n",
@@ -121,19 +137,20 @@
     "    centroids = estimator.cluster_centers_\n",
     "    labels = estimator.labels_\n",
     "    \n",
-    "    return centroids, labels"
+    "    return centroids, label\n",
+    "\n",
+    "def stress_weight_mean(stress_dist, N=5):\n",
+    "    out = np.sum([stress_dist['stress_level_stress_{}'.format(i)]*(i+1) for i in range(N)], axis=0)\n",
+    "    total = np.sum([stress_dist['stress_level_stress_{}'.format(i)] for i in range(N)], axis=0)\n",
+    "    return out/total\n",
+    "\n",
+    "print(stress_weight_mean(X))\n",
+    "print(X.loc[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -144,77 +161,50 @@
       "    n_clusters=5, n_init=5, n_jobs=None, precompute_distances='auto',\n",
       "    random_state=None, tol=0.0001, verbose=0)\n",
       "\n",
-      "[[ 7.75000000e+00  2.80000000e+01  6.72500000e+01  3.12500000e+01\n",
-      "   3.55000000e+01  5.68000000e+02 -2.22044605e-16]\n",
-      " [ 4.60000000e+00  1.04000000e+01  2.36000000e+01  7.20000000e+00\n",
-      "   7.20000000e+00  1.61000000e+02  1.00000000e+00]\n",
-      " [ 6.00000000e+01  2.67000000e+02  3.99000000e+02  2.10000000e+01\n",
-      "   6.00000000e+01  2.17500000e+03  2.00000000e+00]\n",
-      " [ 4.50000000e+00  4.85000000e+01  1.35000000e+02  4.80000000e+01\n",
-      "   5.85000000e+01  9.91000000e+02  3.00000000e+00]\n",
-      " [ 8.50000000e+00  2.80000000e+01  5.57500000e+01  1.40000000e+01\n",
-      "   1.60000000e+01  3.67750000e+02  4.00000000e+00]]\n",
-      "[4 4 0 1 4 3 1 3 4 0 1 3 0 1 3 1 0 4 0 1 4 4 1 0 0 1 4 0 1 1 4 3 3 1 4 1 0\n",
-      " 1 0 4 4 1 1 0 0 2]\n",
-      "stress_level_stress_0      6\n",
-      "stress_level_stress_1     27\n",
-      "stress_level_stress_2     48\n",
-      "stress_level_stress_3      9\n",
-      "stress_level_stress_4     18\n",
-      "svg_stress_score_        330\n",
-      "hist_cluster               4\n",
-      "Name: 0, dtype: int64\n"
+      "[0 0 2 4 0 3 4 3 0 2 4 3 2 4 3 4 2 0 2 4 0 0 4 2 2 4 0 2 4 4 0 3 3 4 0 4 2\n",
+      " 4 2 0 0 4 4 2 2 1]\n",
+      "stress_level_stress_0      0\n",
+      "stress_level_stress_1      9\n",
+      "stress_level_stress_2     87\n",
+      "stress_level_stress_3      6\n",
+      "stress_level_stress_4     27\n",
+      "svg_stress_score_        438\n",
+      "hist_cluster               0\n",
+      "Name: 40, dtype: int64\n",
+      "[ 6  3  0  6 18  6  0  9  3  0  0  0  0  0  3  0 12  0  3  0  0  9  3  3\n",
+      "  3  0 15  0  0  0 15  3  6 36  6  0 48  0  0 27  0  0 24  9 15 60]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/nsimsiri/anaconda2/envs/python3/lib/python3.6/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "/Users/nsimsiri/anaconda2/envs/python3/lib/python3.6/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"\n"
+      "  \n"
      ]
     }
    ],
    "source": [
     "K = 5\n",
+    "sid = 40\n",
     "cen, clus = cluster(CL.KMeans(init=\"k-means++\", n_clusters=K, n_init=K), data)\n",
-    "print(cen)\n",
+    "# print(cen)\n",
     "print(clus)\n",
     "X['hist_cluster'] = list(clus)\n",
-    "print(X.iloc[0])y"
+    "\n",
+    "print(X.iloc[sid])\n",
+    "print(X['stress_level_stress_0'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{4: [0, 1, 4, 8, 17, 20, 21, 26, 30, 34, 39, 40], 0: [2, 9, 12, 16, 18, 23, 24, 27, 36, 38, 43, 44], 1: [3, 6, 10, 13, 15, 19, 22, 25, 28, 29, 33, 35, 37, 41, 42], 3: [5, 7, 11, 14, 31, 32], 2: [45]}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([(0, [2, 9, 12, 16, 18, 23, 24, 27, 36, 38, 43, 44]),\n",
-       "             (1, [3, 6, 10, 13, 15, 19, 22, 25, 28, 29, 33, 35, 37, 41, 42]),\n",
-       "             (2, [45]),\n",
-       "             (3, [5, 7, 11, 14, 31, 32]),\n",
-       "             (4, [0, 1, 4, 8, 17, 20, 21, 26, 30, 34, 39, 40])])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = {}\n",
     "for i, x in enumerate(clus):\n",
@@ -227,52 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 2, 2, 2, 2, 0, 2, 0, 2, 2, 2, 0, 2, 2, 0, 2, 0, 0, 2, 2, 2, 2, 2, 0, 2, 2, 2, 0, 2, 2, 2, 0, 0, 2, 2, 2, 2, 2, 0, 2, 0, 2, 2, 0, 0, 1]\n",
-      "{2: [0, 1, 2, 3, 4, 6, 8, 9, 10, 12, 13, 15, 18, 19, 20, 21, 22, 24, 25, 26, 28, 29, 30, 33, 34, 35, 36, 37, 39, 41, 42], 0: [5, 7, 11, 14, 16, 17, 23, 27, 31, 32, 38, 40, 43, 44], 1: [45]}\n",
-      "OrderedDict([   (0, [5, 7, 11, 14, 16, 17, 23, 27, 31, 32, 38, 40, 43, 44]),\n",
-      "                (1, [45]),\n",
-      "                (   2,\n",
-      "                    [   0,\n",
-      "                        1,\n",
-      "                        2,\n",
-      "                        3,\n",
-      "                        4,\n",
-      "                        6,\n",
-      "                        8,\n",
-      "                        9,\n",
-      "                        10,\n",
-      "                        12,\n",
-      "                        13,\n",
-      "                        15,\n",
-      "                        18,\n",
-      "                        19,\n",
-      "                        20,\n",
-      "                        21,\n",
-      "                        22,\n",
-      "                        24,\n",
-      "                        25,\n",
-      "                        26,\n",
-      "                        28,\n",
-      "                        29,\n",
-      "                        30,\n",
-      "                        33,\n",
-      "                        34,\n",
-      "                        35,\n",
-      "                        36,\n",
-      "                        37,\n",
-      "                        39,\n",
-      "                        41,\n",
-      "                        42])])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ori = list(data['cluster_'])\n",
     "# print(ori)\n",
